tests/paczka1/fuzzy1/23393358.err
Error in line 3: S971 S22 551,1
Error in line 17: IRZ S508 39,6
Error in line 18: IRZ S22 86,7
Error in line 12: sp2 S22 7,1
Error in line 15: x1xlf9 S508 59,7
Error in line 24: x1xlf9 A387 34,0
Error in line 29: x1xlf9 S508 96,3
Error in line 19: sTfKWByOZy S971 5,8
Error in line 34: sTfKWByOZy A387 61,5
Error in line 36: S971 S22 87,4
